--- a/style.css
+++ b/style.css
@@ -1,15 +1,25 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: Product Sans;
+    src: url(/fontes/Product\ Sans\ Regular.ttf);
+}
+
+@font-face {
+    font-family: Product Sans B;
+    src: url(fontes/Product\ Sans\ Bold.ttf);
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Product Sans;
 }
 
 html, body {
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -113,5 +123,40 @@ div.hero {
     width: 50px;
 }
 
+/*editando a segunda sessão*/
+
+.two {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    background-color: #4d231c;
+}
  
 
+.left-side, .right-side {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 5vh;
+    width: 50%;
+    height: 100%;
+} 
+
+.left-side svg {
+    margin-top: 50vh;
+    width: 90%;
+    transform: rotateX(50deg);
+}
+
+.right-side h2 {
+    color: white;
+    font-size: 5vw;
+}
+
+.right-side p {
+    color: white;
+    font-size: 1vw;
+    width: 80%;
+    line-height: 0.80rem;
+}
