--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header#main {
     position: fixed; 
     display: flex;
     background-color: transparent;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     height: 10vh;
     z-index: 99;
@@ -159,4 +159,67 @@ div.hero {
     font-size: 1vw;
     width: 80%;
     line-height: 0.80rem;
+}
+
+.three {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    gap: 5vh;
+    background: linear-gradient(150deg, rgb(255,160,0), rgb(255, 94, 0));
+   
+}
+
+.card {
+   position: relative;
+   display: flex;
+   background: linear-gradient(to top, rgb(255, 184, 62), white);
+   align-items: center;
+   width: 25vw;
+   flex-direction: column;
+   gap: 2vh;
+   height: 80vh;    
+   margin-top: 10vh;
+   border-radius: 20px;
+   justify-content: center;
+}
+
+.card h3 {
+    margin-top: 60px;
+    font-size: 3vw;
+    color: black;
+}
+
+.card button {
+    border-radius: 50px;
+    font-size: 1vw;
+    border: none;
+    background-color: rgb(255, 149, 0);
+    color: #fff;
+    padding: 1vw 2vw;
+}
+
+#cocacola {
+    position: absolute;
+    top: -15%;
+    width: 85%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+#pepsi {
+    position: absolute;
+    top: -15%;
+    width: 85%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+.lemon {
+    position: absolute;
+    top: -30%;
+    left: 50%;
+    width: 25vw;
+    transform: translate(-50%, 0%);
 }
